--- a/.devcontainer/esphome/devcontainer.json
+++ b/.devcontainer/esphome/devcontainer.json
@@ -81,10 +81,7 @@
         "files.associations": {
           "**/.vscode/*.json": "jsonc"
         },
-        "C_Cpp.clang_format_path": "/usr/bin/clang-format-13",
-        "C_Cpp.default.defines": [
-          "USE_ESP32"
-        ]
+        "C_Cpp.clang_format_path": "/usr/bin/clang-format-13"
       }
     }
   }
